tests/baselines/reference/for-of3.errors.txt
for-of3.ts(2,6): error TS2487: The left-hand side of a 'for...of' statement must be a variable or a property access.


==== for-of3.ts (1 errors) ====
    var v: any;
    for (v++ of []) { }
         ~~~
!!! error TS2487: The left-hand side of a 'for...of' statement must be a variable or a property access.